# parallel-conc-haskell

./: .txt  README.md  parallel-conc-haskell.cabal  stack.yaml
src/: ListStrategyExample.hs  Main.hs  ParMapExample.hs  ParPairExample.hs  StrategyExample.hs  TreeExample.hs  TreeStrategyExample.hs
src/Concurrent/: Channel.hs  Example.hs  MVars.hs  Reminder.hs
src/EvalMonad/: ParMapExample.hs  ParPairExample.hs  TreeExample.hs
src/ParMonad/: ParMonadExample.hs
src/Strategies/: ListStrategyExample.hs  StrategyExample.hs  TreeStrategyExample.hs
