name:                parallel-conc-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/parallel-conc-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable parallel-conc-haskell
  hs-source-dirs:      src
  other-modules:     ParMapExample
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N -eventlog
  build-depends:       base >= 4.7 && < 5
                        , monad-par
                        , parallel
                        , deepseq
                        , time
